2025-08-30 Fred Gleason <fredg@paravelsystems.com> 	* Modified status icons in the 'List Affiliates' dialog to show 	affidavit state in davit(1).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -19,6 +19,7 @@
 ##
 
 EXTRA_DIST = admin.xpm\
+             blueball.xpm\
              davit-22x22.xpm\
              davit.res\
              davit.ico\
