2025-09-03 Fred Gleason <fredg@paravelsystems.com> 	* Added an icons for Networks in 'icons/network.xpm'. 	* Added an icons for Providers in 'icons/provider.xpm'. 	* Added an icons for Programs in 'icons/program.xpm'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -24,6 +24,9 @@ EXTRA_DIST = admin.xpm\
              davit.res\
              davit.ico\
              greenball.xpm\
+             network.xpm\
+             program.xpm\
+             provider.xpm\
              redball.xpm\
              user.xpm\
              whiteball.xpm
