2025-09-03 Fred Gleason <fredg@paravelsystems.com> 	* Added an icons for Reports in 'icons/report.xpm'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -28,6 +28,7 @@ EXTRA_DIST = admin.xpm\
              program.xpm\
              provider.xpm\
              redball.xpm\
+             report.xpm\
              user.xpm\
              whiteball.xpm
 
