2025-09-03 Fred Gleason <fredg@paravelsystems.com> 	* Added an application icon for davit(1).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,7 +27,8 @@ SUBDIRS = helpers\
           icons\
           davit\
           web\
-          utils
+          utils\
+          xdg
 
 ACLOCAL_AMFLAGS = -I m4
 
