2025-09-05 Fred Gleason <fredg@paravelsystems.com> 	* Updated 'DvtProfile' to use Exemplar v2.0.2. 	* Added a 'dvtwgmgr' helper app in 'utils/dvtwgmgr/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/conf/davit-sample.conf
+++ b/conf/davit-sample.conf
@@ -25,3 +25,12 @@ ServerType=QMYSQL
 
 [Site]
 ContactAddress=affiliates@radioamerica.org
+
+[Wireguard]
+; ConfigurationPath=<pathname>
+;
+; Create a Wireguard VPN tunnel when davit(1) is started, where <pathname>
+; is the full path to a Wireguard configuration. This option may be given
+; multiple times.
+
+;ConfigurationPath=/etc/wireguard/davit.conf
