2025-09-23 Fred Gleason <fredg@paravelsystems.com> 	* Fixed a bug in davit(1) that falsely reported a crash of 	dvtwgmgr(1) at shutdown.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,6 @@ debian/changelog
 debian/control
 utils/dvtdbmgr/dvtdbmgr
 utils/dvtstamp/dvtstamp
+utils/dvtwgmgr/dvtwgmgr
 utils/vnc/davit.xinitrc
 utils/vnc/start_davit.sh
