2025-09-26 Fred Gleason <fredg@paravelsystems.com> 	* Refactored code to use a single 'DvtOpenDb()' function for all 	modules. 	* Added universal support for '--mysql-hostname=', 	'--mysql-loginname=', '-mysql-password=', '--mysql-database=' and 	'--mysql-servertype=' switches in all modules.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/conf/davit-sample.conf
+++ b/conf/davit-sample.conf
@@ -4,6 +4,7 @@ Loginname=dvtuser
 Password=hackme
 Database=Davit
 ServerType=QMYSQL
+;ConnectionTimeout=
 
 [Fonts]
 ; Directives in the [Fonts] section allows the fonts used by Davit to
