2025-09-30 Fred Gleason <fredg@paravelsystems.com> 	* Removed support for the 'ConfigurationPaths=' directive in the 	'[Wireguard]' section of davit.conf(5). 	* Added support for a 'ConfigurationPath=' directive in the 	'[Wireguard]' section of davit.conf(5). 	* Added support for a 'ConnectionPriority=' directive in the 	'[Wireguard]' section of davit.conf(5). 	* Changed the default connection timeout for MySQL/MariaDB 	database connections to ten seconds. 	* Added support for a 'ConnectionTime=' directive in the '[mySQL]' 	section of davit.conf(5).
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/conf/davit-sample.conf
+++ b/conf/davit-sample.conf
@@ -4,7 +4,7 @@ Loginname=dvtuser
 Password=hackme
 Database=Davit
 ServerType=QMYSQL
-;ConnectionTimeout=
+ConnectionTimeout=10
 
 [Fonts]
 ; Directives in the [Fonts] section allows the fonts used by Davit to
@@ -31,7 +31,25 @@ ContactAddress=affiliates@radioamerica.org
 ; ConfigurationPath=<pathname>
 ;
 ; Create a Wireguard VPN tunnel when davit(1) is started, where <pathname>
-; is the full path to a Wireguard configuration. This option may be given
-; multiple times.
+; is the full path to a Wireguard configuration.
 
 ;ConfigurationPath=/etc/wireguard/davit.conf
+
+
+; PathPriority=<path-order>
+;
+; Configure how Davit will attempt to use Wireguard when attempting to
+; establish a database connection. The following <path-order> keywords are
+; recognized:
+;
+;   LocalOnly - Use local network interfaces only --i.e. never attempt
+;               to use a Wireguard tunnel. This is the default.
+;
+;  LocalFirst - Attempt to connect to the database using local network
+;               interfaces only. If that fails, bring up a Wireguard tunnel
+;               and try again.
+;
+;    VpnFirst - Bring up a Wireguard tunnel and attempt to connect to the
+;               database. If that fails, take down the tunnel and try again.
+;
+;PathPriority=LocalOnly
