2025-12-03 Fred Gleason <fredg@paravelsystems.com> 	* Fixed typos in the sample davit.conf(5) file.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/conf/davit-sample.conf
+++ b/conf/davit-sample.conf
@@ -36,7 +36,7 @@ ContactAddress=affiliates@radioamerica.org
 ;ConfigurationPath=/etc/wireguard/davit.conf
 
 
-; PathPriority=<path-order>
+; ConnectionPriority=<path-order>
 ;
 ; Configure how Davit will attempt to use Wireguard when attempting to
 ; establish a database connection. The following <path-order> keywords are
@@ -52,4 +52,4 @@ ContactAddress=affiliates@radioamerica.org
 ;    VpnFirst - Bring up a Wireguard tunnel and attempt to connect to the
 ;               database. If that fails, take down the tunnel and try again.
 ;
-;PathPriority=LocalOnly
+;ConnectionPriority=LocalOnly
